--- a/docs/00_intro/10_fair.mdx
+++ b/docs/00_intro/10_fair.mdx
@@ -84,7 +84,7 @@ Data need to be integrated with and/or compared to other datasets, while compute
 
 Machines need to be able to understand how to exchange and interpret information. Similar to humans, a uniform and standard language aids in this understanding. In chemistry, a great typical example of such an information exchange standard is the [crystallographic information (CIF)](https://doi.org/10.1107/97809553602060000107). This standard also adheres to the aspects described in [I2](#i2-metadata-use-vocabularies-that-follow-fair-principles) and [R1.3](#r13-metadata-meet-domain-relevant-community-standards) below. Simply put, [standard file formats](40_format_standards.mdx) for a given analytical method ensure the data and the associated metadata, which typically include measurement details, for example, follows a prescribed format. This ensures both humans and machines receive the information required to interpret the data.
 
-Especially when looking at metadata, effective and efficient machine readability greatly depends on being able to reduce ambiguity. Metadata provides context to datasets. However, machines need to be able to interpret this context. Therefore, the structured schemas chosen by the repositories should include universally applied [ontologies](https://terminology.nfdi4chem.de/ts/ontologies) and controlled vocabularies to define relationships and avoid ambiguity. For example, chemistry-specific repositories should be designed to include [ontologies](/docs/topics/ontology) such as the [Chemical Methods Ontology (CHMO)](http://purl.obolibrary.org/obo/chmo.owl) or the [Chemical Information Ontology (cheminf)](http://semanticchemistry.github.io/semanticchemistry/ontology/cheminf.owl) to accurately describe the (meta)data provided. Such ontologies should be based on widely-applied data models, for instance, the
+Especially when looking at metadata, effective and efficient machine readability greatly depends on being able to reduce ambiguity. Metadata provides context to datasets. However, machines need to be able to interpret this context. Therefore, the structured schemas chosen by the repositories should include universally applied [ontologies](https://terminology.nfdi4chem.de/ts/ontologies) and controlled vocabularies to define relationships and avoid ambiguity. For example, chemistry-specific repositories should be designed to include [ontologies](/docs/ontology) such as the [Chemical Methods Ontology (CHMO)](http://purl.obolibrary.org/obo/chmo.owl) or the [Chemical Information Ontology (cheminf)](http://semanticchemistry.github.io/semanticchemistry/ontology/cheminf.owl) to accurately describe the (meta)data provided. Such ontologies should be based on widely-applied data models, for instance, the
 [Resource Description Framework (RDF)](https://www.w3.org/RDF/).
 
 ### I2. (meta)data use vocabularies that follow FAIR principles
