--- a/docs/10_domains/20_analytical_chemistry.mdx
+++ b/docs/10_domains/20_analytical_chemistry.mdx
@@ -9,7 +9,7 @@ import Methods from '@site/src/components/Methods.js';
 :::info Summary:
 
 Analytical chemistry is one of the oldest scientific disciplines and an interdisciplinary science, combining methods of physical, inorganic and organic chemistry. Analytical chemistry aims to acquire, process, and evaluate signals to qualify and quantify the composition and to unravel the structure of matter. The analytical chemist applies classical (wet) chemistry and instrumental methods for separation, identification (qualification) and quantification. The discipline is related to many research fields in life, environmental, earth, and engineering sciences, such as metabolomics, medicine, and geochemistry. <br/>
-A typical workflow begins with the conceptualisation of the research question, and the planning of experiments, methods, and surveys to evaluate the hypotheses. Surveys are utilised in life, environmental, and earth sciences to perform experiments and/or to obtain samples required to support the research (e.g., laboratory and field campaigns, cohort studies). Experiments are conducted and samples are processed applying existing or newly established methods along with recording of accompanying metadata. Analytical chemistry applies already in the experimental or sampling stage as conditions need to be controlled or metadata has to be acquired (e.g., pH, temperature, colour). Once the product of the experiment or sample processing is obtained, it is analysed with suitable direct or combined methods for identification and quantification. Processing and interpretation of the acquired research data and [metadata](/docs/topics/metadata) support the answering of the research question and decisions for further experiments, research, and measures.
+A typical workflow begins with the conceptualisation of the research question, and the planning of experiments, methods, and surveys to evaluate the hypotheses. Surveys are utilised in life, environmental, and earth sciences to perform experiments and/or to obtain samples required to support the research (e.g., laboratory and field campaigns, cohort studies). Experiments are conducted and samples are processed applying existing or newly established methods along with recording of accompanying metadata. Analytical chemistry applies already in the experimental or sampling stage as conditions need to be controlled or metadata has to be acquired (e.g., pH, temperature, colour). Once the product of the experiment or sample processing is obtained, it is analysed with suitable direct or combined methods for identification and quantification. Processing and interpretation of the acquired research data and [metadata](/docs/metadata) support the answering of the research question and decisions for further experiments, research, and measures.
 :::
 
 ## Type of experiments for chemical analysis
@@ -43,9 +43,9 @@ A typical workflow begins with the conceptualisation of the research question, a
 
 ## Planning of experiments
 
-- New and reused analytical methods and research ideas are derived from previous work of the own research group, scientific literature, datasets published in [repositories](/docs/topics/repositories), and requirements of public calls for research, development and demonstration projects.
+- New and reused analytical methods and research ideas are derived from previous work of the own research group, scientific literature, datasets published in [repositories](/docs/repositories), and requirements of public calls for research, development and demonstration projects.
 - Experimental design follows a logical order to achieve a specific goal, such as analytical selectivity and sensitivity, or in the case of a non-targeted analysis (e.g., in metabolomics), a coverage of a broad physical-chemical domain of analytes.
-- Planning is concluded by adding the experimental details. All [metadata](/docs/topics/metadata) is [documented](/docs/data/data_documentation) in an [ELN](/docs/topics/eln) (e.g., [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) including references.
+- Planning is concluded by adding the experimental details. All [metadata](/docs/metadata) is [documented](/docs/data_documentation) in an [ELN](/docs/eln) (e.g., [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) including references.
 
 ## Documentation of experiments
 
@@ -54,7 +54,7 @@ A typical workflow begins with the conceptualisation of the research question, a
 - Observations and results of analytical methods with no digital output (i.e. no data files) are added manually to the ELN entry of the experiment, which may include temperatures, or the pH (with metadata where applicable).
 - Obtained data from analytical instruments (e.g., NMR, MS, or IR data) are uploaded to the Chemotion ELN in open file formats and directly attached to the respective ELN experiment entry including instrumental setup metadata.
 - In case instrumental metadata is not convertible to open format without information loss, conditions need to be documented in the ELN.
-- Metadata related to the obtained data, such as mass, volumes, or solvent of measurement, have to be provided according to [metadata standards](/docs/topics/format_standards).
+- Metadata related to the obtained data, such as mass, volumes, or solvent of measurement, have to be provided according to [metadata standards](/docs/format_standards).
 
 ## Data producing methods
 
@@ -77,7 +77,7 @@ A typical workflow begins with the conceptualisation of the research question, a
 
 ## Publication of research data
 
-- In addition to a research article in a scientific journal, the underlying research data are [published](/docs/data/data_publication) in a [repository](/docs/topics/repositories) and linked to the article to realise research data management according to the [FAIR data principles](/docs/topics/fair) ([Best practice examples](/docs/topics/best_practice)).
+- In addition to a research article in a scientific journal, the underlying research data are [published](/docs/data_publication) in a [repository](/docs/repositories) and linked to the article to realise research data management according to the [FAIR data principles](/docs/fair) ([Best practice examples](/docs/best_practice)).
 - Data publication in a repository includes raw and processed data for reuse.
 - The use of the [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) enables a direct transfer of research data and the respective metadata to the [Chemotion Repository](https://www.chemotion-repository.net/welcome). Subsequently, these data are automatically shared with other repositories, e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/). For the publication of research data in other discipline-specific repositories, such as the [MassBank](https://massbank.eu/MassBank/) for reference mass spectra, data have to be exported from the Chemotion ELN and submitted to the respective database.
-- A [persistent identifier](/docs/topics/pid) (e.g., DOI) is generated for a dataset by a repository (e.g., [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
+- A [persistent identifier](/docs/pid) (e.g., DOI) is generated for a dataset by a repository (e.g., [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
