--- a/docs/10_domains/60_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/60_pharmaceutical_chemistry.mdx
@@ -29,7 +29,7 @@ Starting from promising hit compounds, optimisation cycles are performed to impr
 
 ## Documentation of experiments
 
-[Documentation](../30_data/40_data_documentation.mdx) of research data and [metadata](../40_topics/30_metadata.mdx) is carried out, preferably digitally, using a suitable [ELN](/docs/topics/eln) and/or a manual laboratory notebook in paper form.
+[Documentation](../30_data/40_data_documentation.mdx) of research data and [metadata](../40_topics/30_metadata.mdx) is carried out, preferably digitally, using a suitable [ELN](/docs/eln) and/or a manual laboratory notebook in paper form.
 
 Using an ELN:
 
@@ -43,7 +43,7 @@ Using an ELN:
 - Data can be collected during or after the experiment by analysing the obtained product.
 - Manually determined data: Experimental observations, appearance, yield, melting/boiling point, optical rotation, TLC Rf values, refraction index, etc.
 - Digital data are obtained with analytical devices. An overview on file extensions, file sizes and converters for several analytical methods is given in the table below.
-- Raw data files in proprietary file formats should be saved alongside interoperable [open file formats](/docs/topics/format_standards) by using converters or the analytical device software. If no specific open format is currently available, an export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
+- Raw data files in proprietary file formats should be saved alongside interoperable [open file formats](/docs/format_standards) by using converters or the analytical device software. If no specific open format is currently available, an export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
 
 <Methods defaultProfile={"pharma"} />
 
