--- a/docs/50_data_publication/40_lbe/00_lbe-intro.mdx
+++ b/docs/50_data_publication/40_lbe/00_lbe-intro.mdx
@@ -15,5 +15,5 @@ Take a look at the list for inspiration as to what is already possible today!
 
 Do you want to have your published dataset highlighted here or do you need assistance in the preparation of your dataset for publication? Pledge your dataset to NFDI4Chem! More information can be found [here](https://www.nfdi4chem.de/index.php/2022/02/02/data-pledge-lets-lead-by-example-2/).
 
-<IntroButton url={"/docs/lbe/datasets"} imgUrl={"/img/nfdi4chem_Lead_by_Example.svg"} text={"Get started"} />
+<IntroButton url={"/docs/datasets"} imgUrl={"/img/nfdi4chem_Lead_by_Example.svg"} text={"Get started"} />
 
