--- a/docs/60_topics/63_data_description_annotation/20_ontology.mdx
+++ b/docs/60_topics/63_data_description_annotation/20_ontology.mdx
@@ -4,7 +4,7 @@ slug: "/ontology"
 ---
 
 :::info Summary:
-The term ontology, as used in our context, refers to a formally specified conceptualisation of a certain research domain that is focused on answering the question of what can and needs to be represented in this domain. An ontology thus defines a collection of technical terms that can be used to semantically describe research data in a *[FAIR](/docs/topics/fair/)* and machine-readable way by the means of annotating the research data with these technical terms. This is best done automatically behind the scenes by your everyday work apps like the *[ELN](/docs/topics/eln/)*. However, as automated ontology-based annotation is not the standard yet, as ontologies evolve with the new insights gained from research, and, as they might contain term definitions which a domain expert (e.g. a chemist like you) might disagree with, knowing the core concepts of ontologies in ones research domain is helpful in a FAIR RDM context. To get an overview of different ontologies or to work with them, one can use different web services, such as the *[NFDI4Chem Terminology Service](https://terminology.nfdi4chem.de/ts/index). 
+The term ontology, as used in our context, refers to a formally specified conceptualisation of a certain research domain that is focused on answering the question of what can and needs to be represented in this domain. An ontology thus defines a collection of technical terms that can be used to semantically describe research data in a *[FAIR](/docs/fair/)* and machine-readable way by the means of annotating the research data with these technical terms. This is best done automatically behind the scenes by your everyday work apps like the *[ELN](/docs/eln/)*. However, as automated ontology-based annotation is not the standard yet, as ontologies evolve with the new insights gained from research, and, as they might contain term definitions which a domain expert (e.g. a chemist like you) might disagree with, knowing the core concepts of ontologies in ones research domain is helpful in a FAIR RDM context. To get an overview of different ontologies or to work with them, one can use different web services, such as the *[NFDI4Chem Terminology Service](https://terminology.nfdi4chem.de/ts/index). 
 :::
 
 ## Introduction
@@ -15,7 +15,7 @@ The term ontology, as used in our context, refers to a formally specified concep
 Image Attribution: Philip Strömert, Oliver Koepler, Johannes Hunold, Steffen Neumann, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
 
 
-Research data is more than the aggregation of numbers or images in a scientific journal article, experimental section, or supplementary information. To fully reproduce the deduction of the results, we need access to the raw data and how it was generated, processed and analyzed. While humans can grasp all the semantics and knowledge expressed in articles and their experimental sections, computers can not do so without fine grained metadata annotations. As can be seen exemplarily in the graphical abstract above, ontologies, taxonomies, terminologies or controlled vocabularies can be used to semantically describe research data, producing this FAIR and machine-readable data. Quite a few ontologies already exist for the semantic description of general scientific concepts and relations, as well as for chemistry specific ones. Based on an [analysis done in Task Area 6.1](https://doi.org/10.1515/pac-2021-2007) of the NFDI4Chem project, the present article provides a commented selections of those ontologies that seem most suitable for a FAIR RDM in chemistry, as well as a very brief [glossary](/docs/topics/ontology#glossary) of ontological technical terms.
+Research data is more than the aggregation of numbers or images in a scientific journal article, experimental section, or supplementary information. To fully reproduce the deduction of the results, we need access to the raw data and how it was generated, processed and analyzed. While humans can grasp all the semantics and knowledge expressed in articles and their experimental sections, computers can not do so without fine grained metadata annotations. As can be seen exemplarily in the graphical abstract above, ontologies, taxonomies, terminologies or controlled vocabularies can be used to semantically describe research data, producing this FAIR and machine-readable data. Quite a few ontologies already exist for the semantic description of general scientific concepts and relations, as well as for chemistry specific ones. Based on an [analysis done in Task Area 6.1](https://doi.org/10.1515/pac-2021-2007) of the NFDI4Chem project, the present article provides a commented selections of those ontologies that seem most suitable for a FAIR RDM in chemistry, as well as a very brief [glossary](/docs/ontology#glossary) of ontological technical terms.
 
 ## Graphical overview of chemical ontologies
 This graphical overview shows chemistry specific ontologies suitable for a FAIR RDM with regard to their position in the [BFO](#bfo)/[OBO Foundry](http://www.obofoundry.org/) framework. 
@@ -107,7 +107,7 @@ The **Chemical Information Ontology ([CHEMINF](https://doi.org/10.1371/journal.p
 ### CHMO & MOP & RXNO
 The OBO compliant **Chemical Methods Ontology ([CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo))**, **Molecular Process Ontology ([MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop))** and **Named Reactions Ontology ([RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno))** have been developed under the auspices of the Royal Society of Chemistry (RSC) starting around 2008 and were initially created with the aim to enhance semantic publishing in the RSC Project Prospect. (see also https://doi.org/10.1021/bk-2014-1164.ch013)
 
-CHMO focuses on the conceptualization of experimental methods applied in chemistry. It extends OBI and IAO with classes that conceptualize needed assays methods, such as *spectroscopy*, *thermal analysis* (including *calorimetry*) or *magnetic resonance method*, as well as lab devices, substances and protocols (e.g. *distillation*, *buffer solution* or *hazard reduction*). For the axiomatisation of its classes CHMO reuses chemical entities defined in ChEBI and relations from OBI as well as BFO. However, the latter should best be substituted with corresponding RO relations instead to avoid interoperability issues (see also [BFO](/docs/topics/ontology/#bfo)).
+CHMO focuses on the conceptualization of experimental methods applied in chemistry. It extends OBI and IAO with classes that conceptualize needed assays methods, such as *spectroscopy*, *thermal analysis* (including *calorimetry*) or *magnetic resonance method*, as well as lab devices, substances and protocols (e.g. *distillation*, *buffer solution* or *hazard reduction*). For the axiomatisation of its classes CHMO reuses chemical entities defined in ChEBI and relations from OBI as well as BFO. However, the latter should best be substituted with corresponding RO relations instead to avoid interoperability issues (see also [BFO](/docs/ontology/#bfo)).
 
 MOP focuses on the conceptualization of general molecular processes, such as *addition reaction*,*cyclization* or *polymerisation*. It is thus a rather small ontology that mainly serves as a basis module for the Named Reaction Ontology (RXNO), in which these fundamental molecular processes are needed for the definition of the more complex reactions. Similar to CHMO, the definitions and synonyms defined in MOP are mostly derived from and linked to their respective IUPAC Gold Book entries. In MOP itself, only the relation *is_catalysis_of* is defined and only used to formally define the class catalysis. Also similar to CHMO, chemical entities from ChEBI are reused for the axiomatization of certain molecular processes.
 
@@ -118,7 +118,7 @@ The **Ontology for Chemical Kinetic ReactionMechanisms ([OntoKin](https://doi.or
 
 ### AFO
 The **Allotrope Foundation Merged Ontology Suite ([AFO](https://www.allotrope.org/ontologies))**, first published in March 2018, is a collection of taxonomies and ontologies developed by the Allotrope Foundation that is intended as a standard language for describing equipment, processes, materials, and results. AFO provides the semantic context in a technology stack, called Allotrope Framework, which also consists of the Allotrope Data Model (ADM) and the AllotropeData Format (ADF). The goal of ADF is to unify the laboratory IT landscape by becoming the gold standard with regard to the many different data formats present today. According to [Millecam et al.](https://doi.org/10.1016/j.drudis.2021.03.028), its adoption is still at the very beginning.
-An out of the box modular reuse of Allotrope’s ontology suite along with OBO based ontologies might lead to problems, as there certain design related differences, such as AFO's strict principle of single inheritance, which means that a class in AFO cannot have multiple parent classes, its not so well documented import strategy of BFO as well as classes and relations from other OBO ontologies, or the fact that AFO reuses the BFO 2020 ISO version including its temporalized relations (see lso [BFO](/docs/topics/ontology/#bfo)).
+An out of the box modular reuse of Allotrope’s ontology suite along with OBO based ontologies might lead to problems, as there certain design related differences, such as AFO's strict principle of single inheritance, which means that a class in AFO cannot have multiple parent classes, its not so well documented import strategy of BFO as well as classes and relations from other OBO ontologies, or the fact that AFO reuses the BFO 2020 ISO version including its temporalized relations (see lso [BFO](/docs/ontology/#bfo)).
 
 ### PROCO
 The **Process Chemistry Ontology ([PROCO](https://www.youtube.com/watch?v=HVv8TJc7p9c))** describes the domain of process chemistry from *route scouting*, *process optimization*, *process validation* and *process maintenance* with key concepts like *product quality*, *production processes*, *environmental sustainability*, *regulatory compliance*, and *safety*. This BFO aligned ontology is currently being developed as a joint venture between academia (University of Michigan) and industry (Merk, GSK, Allotrope Foundation). In order to foster the collaboration between the Allotrope Foundation and the OBO community, PROCO was submitted for review to the OBO foundry in April 2021. Following a button-up approach in the definition of certain terms, the PROCO developers identified standardized lab practices and basic process patterns that are explicitly or implicitly present in Allotrope's data model as well as in the specifications of regulatory agencies. PROCO reuses terms from chemical ontologies, such as CHMO and ChEBI, alongside other needed common OBO and non OBO terms (mainly from AFO and SIO). 
