--- a/docs/10_domains/30_physical_chemistry.mdx
+++ b/docs/10_domains/30_physical_chemistry.mdx
@@ -24,19 +24,19 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 - for distance measurements in the range of about 1-8 nm
 
 ### What kind of data is generated?
-- almost exclusively [proprietary file formats](/docs/topics/format_standards) (e.g. .spe or .DTA/.DSC) of the "Bruker Corporation" company
-- transfer into [open file formats](/docs/topics/format_standards) (e.g. .txt or .csv) either via Bruker software on the measuring device itself or via tools like [SpinToolbox](https://www.spintoolbox.com/en/)
+- almost exclusively [proprietary file formats](/docs/format_standards) (e.g. .spe or .DTA/.DSC) of the "Bruker Corporation" company
+- transfer into [open file formats](/docs/format_standards) (e.g. .txt or .csv) either via Bruker software on the measuring device itself or via tools like [SpinToolbox](https://www.spintoolbox.com/en/)
 - analysis of data using Bruker software or e.g. [EasySpin](https://www.easyspin.org/) as open-source toolbox for MATLAB
 
-### How to do it [FAIR](/docs/topics/fair)?
-- [documentation of all research data](/docs/data/data_documentation) and [metadata](/docs/topics/metadata) is carried out digitally using an suitable [ELN](/docs/topics/eln) (possibly in addition to a manual laboratory notebook in paper form)
-- experimental conditions (e.g. sample concentration, solvent etc.) and measurement parameters (e.g. frequency, temperature) are noted in the [ELN](/docs/topics/eln)
-- observations, deviations from planned measurement protocol or other peculiarities during measurement with no digital output (i.e. no data files) are added manually to the [ELN](/docs/topics/eln) entry of the experiment
-- obtained unprocessed raw files from measurements are uploaded to [ELN](/docs/topics/eln) in open file formats and attached directly to the respective [ELN](/docs/topics/eln) experiment entry, including metadata with data on the instrument (e.g. manufacturer, type, etc.), measurement conditions & parameters
-- [metadata](/docs/topics/metadata) related to the obtained data, such as temperature or solvent of measurement, follow common [metadata standards](/docs/topics/metadata)
+### How to do it [FAIR](/docs/fair)?
+- [documentation of all research data](/docs/data_documentation) and [metadata](/docs/metadata) is carried out digitally using an suitable [ELN](/docs/eln) (possibly in addition to a manual laboratory notebook in paper form)
+- experimental conditions (e.g. sample concentration, solvent etc.) and measurement parameters (e.g. frequency, temperature) are noted in the [ELN](/docs/eln)
+- observations, deviations from planned measurement protocol or other peculiarities during measurement with no digital output (i.e. no data files) are added manually to the [ELN](/docs/eln) entry of the experiment
+- obtained unprocessed raw files from measurements are uploaded to [ELN](/docs/eln) in open file formats and attached directly to the respective [ELN](/docs/eln) experiment entry, including metadata with data on the instrument (e.g. manufacturer, type, etc.), measurement conditions & parameters
+- [metadata](/docs/metadata) related to the obtained data, such as temperature or solvent of measurement, follow common [metadata standards](/docs/metadata)
 - research data are processed, analysed and compared with open non-proprietary software tools
-- simultaneously with [publication](/docs/data/data_publication) as a research article in a scientific journal, the underlying research data is published in an open data [repository](/docs/topics/repositories) and linked to the article (incl. semantically richly annotated raw and processed data in open data formats for reuse)
-- an unique [persistent identifier](/docs/topics/pid) (e.g. DOI) is generated for each dataset as well as for the journal publication
+- simultaneously with [publication](/docs/data_publication) as a research article in a scientific journal, the underlying research data is published in an open data [repository](/docs/repositories) and linked to the article (incl. semantically richly annotated raw and processed data in open data formats for reuse)
+- an unique [persistent identifier](/docs/pid) (e.g. DOI) is generated for each dataset as well as for the journal publication
 
 ## Quantum Mechanical (QM) calculations
 
@@ -53,17 +53,17 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 - data formats depend strongly on the program that is used for the QM calculations, e.g. Gaussian, ORCA, Molpro, TURBOMOLE or Jaguar, but generally formatted text files are used as input and log files. Compressed data formats are used to store wavefunction, density information and operators. Molecular structures are provided in human-readable format
 - data analysis is carried out using custom scripts. A few programs provide their own scripts for common tasks (such as plotting of molecular orbitals) and dedicated GUIs
 
-### How to do it [FAIR](/docs/topics/fair)?
-- [documentation of all research data](/docs/data/data_documentation) and [metadata](/docs/topics/metadata) is carried out digitally using a suitable repository (e.g. NOMAD, ioChem-BD or a general-purpose repository) to store the input files, main log and structures files (if not included in the log)
+### How to do it [FAIR](/docs/fair)?
+- [documentation of all research data](/docs/data_documentation) and [metadata](/docs/metadata) is carried out digitally using a suitable repository (e.g. NOMAD, ioChem-BD or a general-purpose repository) to store the input files, main log and structures files (if not included in the log)
 - reproducibility of calculations to within numerical accuracy can be ensured by storing the input files and adding the program and its version (ideally even the compiler version and any compiler flags) as metadata. Numerical thresholds are well defined but reproducibility of calculations across different programs and versions is not guaranteed. This warrants the safekeeping of version specific source files for the same time period as the stored data
 - data analysis scripts should be uploaded to the repository in open file formats, attached directly to the corresponding data entry and accompanied with appropriate documentation
 - if possible, analysis and evaluation of calculations should be conducted with open, non-proprietary software tools
-- simultaneously with [publication](/docs/data/data_publication) as a research article in a scientific journal, the data in the [repository](/docs/topics/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
-- a unique [persistent identifier](/docs/topics/pid) (e.g. DOI) is generated for the dataset as well as for the journal publication
+- simultaneously with [publication](/docs/data_publication) as a research article in a scientific journal, the data in the [repository](/docs/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
+- a unique [persistent identifier](/docs/pid) (e.g. DOI) is generated for the dataset as well as for the journal publication
 - XML and CML (Chemical Markup Language) is used by a few software packages but this is not common practice
 
 ### Challenges to make data FAIR
-- no standardised transfer into [open file formats](/docs/topics/format_standards). All repositories of quantum chemical calculations to date make use of in-house parsers to extract the calculation data from uploaded logs. This trend hinders the improvement of FAIR practices since new developers are not provided with a template for log files. Any new software can only be featured in repositories after a unique parser is developed
+- no standardised transfer into [open file formats](/docs/format_standards). All repositories of quantum chemical calculations to date make use of in-house parsers to extract the calculation data from uploaded logs. This trend hinders the improvement of FAIR practices since new developers are not provided with a template for log files. Any new software can only be featured in repositories after a unique parser is developed
 - lack of open meta-input and output file formats that are necessary to enable full interoperability of different programs and tools used for QM calculations. Particularly concerning is the lack of standards for: z-matrix and xyz file formats, trajectory files in molecular dynamics or structure optimisations, definition of isotopes, potential energy surfaces as well as equations used in the derivation of properties including thermodynamic quantities
 
 ## Molecular Mechanical (MM) simulations
@@ -81,15 +81,15 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 - data formats depend strongly on the program that is used for the MM calculations, e.g. AMBER, CHARMM, GROMACS, LAMMPS or NAMD but in general specifically formatted text files are used as input and log files, and a binary representation for checkpoint and trajectory files
 - analysis of data using tools provided by the software’s manufacturer or custom scripts
 
-### How to do it [FAIR](/docs/topics/fair)?
-- [documentation of all research data](/docs/data/data_documentation) and [metadata](/docs/topics/metadata) is carried out digitally using a suitable repository to store the data
+### How to do it [FAIR](/docs/fair)?
+- [documentation of all research data](/docs/data_documentation) and [metadata](/docs/metadata) is carried out digitally using a suitable repository to store the data
 - reproducibility of calculations can be ensured by storing the input file and adding the program and its version (ideally including the compiler and any compiler flags) as metadata
 - if possible, analysis and evaluation of calculations should be conducted with open non-proprietary software tools
-- simultaneously with [publication](/docs/data/data_publication) as a research article in a scientific journal, the data in the [repository](/docs/topics/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
-- a unique [persistent identifier](/docs/topics/pid) (e.g. DOI) is generated for each dataset as well as for the journal publication
+- simultaneously with [publication](/docs/data_publication) as a research article in a scientific journal, the data in the [repository](/docs/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
+- a unique [persistent identifier](/docs/pid) (e.g. DOI) is generated for each dataset as well as for the journal publication
 
 ### Challenges to make data FAIR
-- no standardised transfer into [open file formats](/docs/topics/format_standards) for different simulation packages
+- no standardised transfer into [open file formats](/docs/format_standards) for different simulation packages
 - development of open meta-input and output file formats is required to handle the multitude of different programs and tools used in MM calculations in accordance with the FAIR principles. Tools such as PLUMED can help users with this problem
 - trajectory files are typically too large to store in commonly used repository environments, even when using compressed file formats. To make this data FAIR, standards for handling large amounts of data must be developed or solutions from other fields applied
 - reproducibility of long time-scale molecular dynamics is unattainable (numerical noise will eventually affect the resulting trajectories, especially in a multicore environment). Depending on the numerical accuracy and the specific implementation, deviations can be observed as soon as in the picosecond range. However, thermodynamic averages or other probabilistic measurements should be achieved within a suitable margin of error. This margin would have to be estimated and provided by the authors of a publication
