--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -25,13 +25,13 @@ Curators proof-check data before **ingestion** in the repository, with regard to
 
 A repository is constituted by repository software and a database. Data providers can transfer the data to the repository typically via a web-based user interface, or the repository operators collect (**harvest**) the data automatically from other platforms via appropriate protocols and interfaces.
 
-In order to allow data re-use by third parties, [metadata](/docs/topics/metadata) are required beside the actual data. They describe the content of the research data and provide information about its creation, the software or methods used and legal aspects. Metadata can be either added manually or provided through other applications. The metadata should also include terms of use in the form of licences that regulate access to the data (registration, embargo, etc.).
+In order to allow data re-use by third parties, [metadata](/docs/metadata) are required beside the actual data. They describe the content of the research data and provide information about its creation, the software or methods used and legal aspects. Metadata can be either added manually or provided through other applications. The metadata should also include terms of use in the form of licences that regulate access to the data (registration, embargo, etc.).
 
-Usually repositories offer a search function with which users can find, view and download data. In order to ensure that data are permanently referenced and cited, repositories assign unique [persistent identifiers](/docs/topics/pid) (PIDs). 
+Usually repositories offer a search function with which users can find, view and download data. In order to ensure that data are permanently referenced and cited, repositories assign unique [persistent identifiers](/docs/pid) (PIDs). 
 
 ## Finding the right repository
 
-Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry (e.g. https://fairsharing.org/ or https://www.re3data.org/). Repository registry services are an essential component of the [FAIR](/docs/topics/fair) (**F**indable **A**ccessible **I**nteroperable **R**eusable)-strategy as they help researchers to navigate through thousands of data repository services to find the most suitable one to store and provide access to their research outputs as well as to enable them to search for and repurpose FAIR data created by others. DataCite's Repository Finder finds repositories that meet the criteria recommended by the Enabling FAIR Data Project. ROAR and OPENDOAR are directories that list Open Access repositories from all over the world.
+Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry (e.g. https://fairsharing.org/ or https://www.re3data.org/). Repository registry services are an essential component of the [FAIR](/docs/fair) (**F**indable **A**ccessible **I**nteroperable **R**eusable)-strategy as they help researchers to navigate through thousands of data repository services to find the most suitable one to store and provide access to their research outputs as well as to enable them to search for and repurpose FAIR data created by others. DataCite's Repository Finder finds repositories that meet the criteria recommended by the Enabling FAIR Data Project. ROAR and OPENDOAR are directories that list Open Access repositories from all over the world.
 
 Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures data users, among other things, that data will be usable, citable and preserved in the long run. 
 
@@ -39,12 +39,12 @@ Nowadays more and more peer review journals mandate authors to deposit their dat
 
 ## Repositories for Chemistry
 
-In the field of synthetic and analytical chemistry, the repository [Chemotion](https://www.chemotion-repository.net/welcome) was developed aiming to fill the existing gap for the preservation and publication of experimental work. Chemotion supports scientists in depositing and sharing data in a structured and transparent way. It is free of charge and its software code is available on GitHub. It uses available standardised identifiers such as the reaction **InChI** (RInChI and RInChIKey). In addition, it is possible to transfer data from an Open Source [Electronic Laboratory Notebook](/docs/topics/eln) (ELN) into the workspace area of the repository. The main advantages of the Chemotion repository are:
+In the field of synthetic and analytical chemistry, the repository [Chemotion](https://www.chemotion-repository.net/welcome) was developed aiming to fill the existing gap for the preservation and publication of experimental work. Chemotion supports scientists in depositing and sharing data in a structured and transparent way. It is free of charge and its software code is available on GitHub. It uses available standardised identifiers such as the reaction **InChI** (RInChI and RInChIKey). In addition, it is possible to transfer data from an Open Source [Electronic Laboratory Notebook](/docs/eln) (ELN) into the workspace area of the repository. The main advantages of the Chemotion repository are:
 
 - comprehensive functionality for the collection, preparation and reuse of data using discipline specific methods and data processing tools
 - existence of automated procedures to ease data curation
 - provision of functions for a seamless publication and citation of deposited data
-- support of [Digital Object Identifier](/docs/topics/pid) (DOI) generation, the comparison of the submissions with PubChem instances, and workflows for peer reviewing of the submissions including embargo settings
+- support of [Digital Object Identifier](/docs/pid) (DOI) generation, the comparison of the submissions with PubChem instances, and workflows for peer reviewing of the submissions including embargo settings
 
 ### Core repositories
 
