--- a/docs/50_data_publication/70_machine-readable_chemical_structures.mdx
+++ b/docs/50_data_publication/70_machine-readable_chemical_structures.mdx
@@ -11,13 +11,13 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 Finding relevant articles based on IUPAC names or trivial names of molecules is a challenging task, while chemical identifiers allow for unambiguous identification of compounds. Redrawing of chemical structures is labour and time intensive, while chemical table (CT) files can be used without any additional effort with any common structure drawing software. 
 
-Having machine-readable chemical structures as [CT files](/docs/topics/ct_files) such as mol files, [InChI](/docs/topics/inchi) identifiers and [SMILES](/docs/topics/smiles) structure codes as part of a dataset associated with a research article will enhance its [findability](/docs/topics/fair) by making the article easily indexable and structure-searchable. This also improves [interoperability](/docs/topics/fair) and facilitates [reuse](/docs/topics/fair) of scientific work.
+Having machine-readable chemical structures as [CT files](/docs/ct_files) such as mol files, [InChI](/docs/inchi) identifiers and [SMILES](/docs/smiles) structure codes as part of a dataset associated with a research article will enhance its [findability](/docs/fair) by making the article easily indexable and structure-searchable. This also improves [interoperability](/docs/fair) and facilitates [reuse](/docs/fair) of scientific work.
 
 The following will provide a tutorial on how to increase the machine-readability of chemistry research articles by providing machine-readable chemical structures as data files within the associated dataset. Moreover, recommendations to provide structure codes and identifiers in a machine-readable supplementary table within the associated dataset are given. 
 
 While such information is not required for structured domain-specific repositories such as Chemotion Reopositoy, since this information is provided by the repository software, datasets in generic repositories benefit from this information. 
 
-Please note that there are currently limitations with [SMILES](/docs/topics/smiles) and [InChI](/docs/topics/inchi) for inorganic and especially organometallic compounds. 
+Please note that there are currently limitations with [SMILES](/docs/smiles) and [InChI](/docs/inchi) for inorganic and especially organometallic compounds. 
 
 ## Get mol files
 
@@ -90,9 +90,9 @@ Additionally, this table may also include further columns for:
 
 PubChem compound identifiers (CIDs) as well as CAS registry numbers are easily retrieved in [PubChem](https://pubchem.ncbi.nlm.nih.gov/) by searching via SMILES, InChI or InChIKey. 
 
-Templates for such a table are provided as [.ods](pathname://../../../assets/Supplementary_table_template.ods), [.xlsx](pathname://../../../assets/Supplementary_table_template.xlsx), and [.csv](pathname://../../../assets/Supplementary_table_template.csv) files. These template files also take advantage of [ontologies](/docs/topics/ontology) to unambiguously identify terms for humans and machines. 
+Templates for such a table are provided as [.ods](pathname://../../../assets/Supplementary_table_template.ods), [.xlsx](pathname://../../../assets/Supplementary_table_template.xlsx), and [.csv](pathname://../../../assets/Supplementary_table_template.csv) files. These template files also take advantage of [ontologies](/docs/ontology) to unambiguously identify terms for humans and machines. 
 
-If the experimental work is documented in an [ELN](/docs/topics/eln), these information could also be provided by the ELN system. Chemotion ELN generates [SMILES](/docs/topics/smiles), [InChI](/docs/topics/inchi), InChIKey as well as RInChI and RInChIKey for compounds and reactions. These information are also available in Chemotion Repository i.e. such a supplementary table is not required with structured domain-specific repositories such as Chemotion Repository, while datasets in generic repositories will profit from such a table.
+If the experimental work is documented in an [ELN](/docs/eln), these information could also be provided by the ELN system. Chemotion ELN generates [SMILES](/docs/smiles), [InChI](/docs/inchi), InChIKey as well as RInChI and RInChIKey for compounds and reactions. These information are also available in Chemotion Repository i.e. such a supplementary table is not required with structured domain-specific repositories such as Chemotion Repository, while datasets in generic repositories will profit from such a table.
 
 *This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.* 
 
